roleRevert - fix text truncation

--- a/roleRevert/src/themefile.scss
+++ b/roleRevert/src/themefile.scss
@@ -57,7 +57,6 @@ $theme-variable: rrv;
     border-color: transparent;
   }
   .roleName-DUQZ9m {
-    display: flex;
     order: 1;
     height: inherit;
     margin: 0 6px 0 6px;
@@ -72,7 +71,6 @@ $theme-variable: rrv;
     background-position: center;
     background-repeat: no-repeat;
     background-color: transparent !important;
-    display: flex;
     order: 2;
     height: 25px;
     margin: 0 6px 0 0;
